--- a/timer.css
+++ b/timer.css
@@ -9,9 +9,9 @@ h2 {
 }
 
 .box {
-  margin-inline-start: 20vw;
+  margin-inline-start: 24vw;
   margin-block-start: 20vh;
-  background-color: #1CAC78;
+  background-color: #1cac78;
   height: 50vh;
   width: 50vw;
 }
@@ -27,6 +27,10 @@ h2 {
   border-radius: 50%;
 }
 
+.startBtn:focus {
+  background-color: yellow;
+}
+
 .stopBtn {
   height: 8vh;
   width: 10vw;
@@ -38,6 +42,10 @@ h2 {
   border-radius: 50%;
 }
 
+.stopBtn:focus {
+  background-color: yellow;
+}
+
 .resetBtn {
   height: 8vh;
   width: 10vw;
@@ -47,6 +55,10 @@ h2 {
   top: 30vh;
   margin-left: 5vw;
   border-radius: 50%;
+}
+
+.resetBtn:focus {
+  background-color: yellow;
 }
 
 .deleteAll {
