--- a/timer.css
+++ b/timer.css
@@ -6,6 +6,7 @@ h2 {
   text-align: center;
   position: relative;
   top: 5vh;
+  font-size: 5rem;
 }
 
 .box {
@@ -14,6 +15,7 @@ h2 {
   background-color: #1cac78;
   height: 50vh;
   width: 50vw;
+
 }
 
 .startBtn {
@@ -25,6 +27,7 @@ h2 {
   top: 30vh;
   margin-right: 5vw;
   border-radius: 50%;
+  font-size: 3rem;
 }
 
 .startBtn:focus {
@@ -38,6 +41,7 @@ h2 {
   background-color: white;
   position: relative;
   top: 30vh;
+  font-size: 3rem;
 
   border-radius: 50%;
 }
@@ -55,6 +59,7 @@ h2 {
   top: 30vh;
   margin-left: 5vw;
   border-radius: 50%;
+  font-size: 3rem;
 }
 
 .resetBtn:focus {
@@ -68,7 +73,7 @@ h2 {
   position: relative;
   top: 15vh;
   left: 10vw;
-
+  font-size: 3rem;
   border-radius: 50%;
 }
 
@@ -114,8 +119,8 @@ h2 {
   .resetBtn {
     height: 8vh;
     width: 14vw;
-    font-weight: 600;
-    background-color: white;
+    font-size: 3rem;
+    background-color: rgb(192, 31, 31);
     position: relative;
     top: 30vh;
     margin-left: 5vw;
